[package]
name = "pyisheval"
version = "0.10.0"
edition = "2021"
authors = ["neka-nat <nekanat.stock@gmail.com>"]
description = "A Python-like expression evaluator in Rust"
license = "MIT"
repository = "https://github.com/neka-nat/pyisheval"
readme = "README.md"
keywords = ["python", "eval", "expression", "lambda", "interpreter"]
categories = ["development-tools::debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.7.0"
lazy_static = "1.5.0"
nom = "7.1.3"
thiserror = "2.0.6"
